2009-09-26 Philipp Klaus Krause <pkk AT spth.de>
	  src/z80/peeph-z80.def:
	  Minor peephole improvement.

2009-09-26 Philipp Klaus Krause <pkk AT spth.de>
	* src/SDCCpeeph.c,
	  src/z80/peeph-z80.def:
	  Fixed #2867572.

2009-09-20 Philipp Klaus Krause <pkk AT spth.de>
	* device/include/string.h,
	  device/lib/_strspn.c,
	  device/lib/incl.mk,
	  device/lib/_memchr.c,
	  device/lib/_strcspn.c,
	  device/lib/_memcmp.c:
	  Minor string library improvements, including #772292.

2009-09-20 Philipp Klaus Krause <pkk AT spth.de>
	* sdcc/src/SDCCmain.c:
	  Fixed #2819835 applying #2853488.

2009-09-20 Philipp Klaus Krause <pkk AT spth.de>
	* sdcc/debugger/mcs51/sdcdb.c,
	  sdcc/src/SDCCerr.c,
	  sdcc/src/z80/gen.c,
	  sdcc/src/z80/mappings.i,
	  sdcc/src/pic16/gen.c,
	  sdcc/src/pic16/pcode.c,
	  sdcc/support/librarian/sdcclib.c:
	  Applied spelling patch #2862563.

2009-09-15 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/mcs51/at89Sx051.h: new, added, applied patch 2858106,
	  thanks Ben Boeckel

2009-09-08 Jesus Calvino-Fraga <jesusc AT ece.ubc.ca>

	* device/include/mcs51/p89v51rd2.h: Watchdog Timer Control sfr is
	  bit addressable. 

2009-08-31 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c (genAnd, genOr): applied patch for bug 2719592,
	  thanks to Robert Larice
	* support/regression/tests/bug2719592.c: new, added

2009-09-02 Borut Razem <borut.razem AT siol.net>

	* support/regression/ports/gbz80/spec.mk,
	  support/regression/ports/ucz80/spec.mk,
	  support/regression/ports/z80/spec.mk: fixed *z80 regression test if
	  built ran directly from sdcc source directory

2009-08-31 Maarten Brock <sourceforge.brock AT dse.nl>

	* as/asxxsrc/asmain.c,
	* as/asxxsrc/asxxxx.h: fixed warning, main should return int
	* as/hc08/Makefile.in,
	* as/mcs51/Makefile.in: added -lm to LDFLAGS

2009-08-31 Raphael Neider <rneider AT web.de>

	* device/lib/_fsmul.c, device/lib/pic/libsdcc/fsmul.c,